# oxfam-text-analysis

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
data/: mc-onlinenews-mediacloud-20240221094242-content.csv
notebooks/: exploration.ipynb
